recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: Non-zero integral values may not have a leading zero.
 avance(100,00)
            ^FourSquare:3: error: illegal start of simple expression
 avance(100,00)
            ^FourSquare:5: error: ')' expected but '}' found.
}
^